syntax = "proto3";
package cosmos.distribution.v1beta1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/distribution/types";

// DistributionAuthorization defines a grant that can be given to an address to allow them to
// execute distribution messages on behalf of the granter.
message DistributionAuthorization {
  option (cosmos_proto.implements_interface) = "Authorization";

  // message_type represents the type of the message that is authorized by this DistributionAuthorization.
  string message_type = 1;
  // allowed_list specifies list of addresses that are allowed to execute the distribution messages.
  repeated string allowed_list = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

